@@ -25,5 +25,5 @@ if {![package vsatisfies [package provide Tcl] 8.4]} {return}
     widget::scrolledwindow	1.2	scrollw.tcl
     widget::statusbar		1.1	statusbar.tcl
     widget::superframe		1.0	superframe.tcl
-    widget::toolbar		1.1	toolbar.tcl
+    widget::toolbar		1.2	toolbar.tcl
 }
